<resources>
    <string name="app_name">E-Commerce App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_values">filter_values</string>
    <string name="query_hint">Search</string>
    <string name="see_all">See All</string>
    <string name="popular_products">Popular Products</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="product_image">Product Image</string>
    <string name="rating_icon">rating_icon</string>
    <string name="default_int_value">0</string>
    <string name="minus_icon">minus_icon</string>
    <string name="plus_icon">plus_icon</string>
    <string name="cart_icon">cart_icon</string>
</resources>