<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp"
        android:background="#fff"
        tools:context=".view.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:queryHint="@string/query_hint"
                    android:iconifiedByDefault="false"
                    android:layout_marginEnd="12dp"
                    app:queryBackground="@android:color/transparent"
                    android:background="@drawable/grey_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_filter"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_filter"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/filter_values"
                    android:src="@drawable/ic_filter_50"
                    android:background="@drawable/grey_background"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/searchView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/searchView" />


                <LinearLayout
                    android:id="@+id/ll_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/searchView"
                    app:layout_constraintStart_toStartOf="@id/searchView"
                    app:layout_constraintTop_toBottomOf="@id/searchView">

                    <TextView
                        android:id="@+id/tvTrendingProducts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trending Products"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <TextView
                        android:id="@+id/tvSeeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="See All"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrendingProductsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@id/ll_one"
                    app:layout_constraintStart_toStartOf="@id/ll_one"
                    app:layout_constraintTop_toBottomOf="@id/ll_one" />

                <LinearLayout
                    android:id="@+id/ll_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/rvTrendingProductsList"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvTrendingProductsList">

                    <TextView
                        android:id="@+id/tvPopularProducts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_products"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <TextView
                        android:id="@+id/tvSeeAl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="@+id/ll_two"
                    app:layout_constraintStart_toStartOf="@+id/ll_two"
                    app:layout_constraintTop_toBottomOf="@+id/ll_two">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="40dp"
                        app:chipSpacingHorizontal="10dp"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip1"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="All" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip2"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Electronics" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip3"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jeans" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip4"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Shirts" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip5"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Bags" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip6"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Shoes" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip7"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="watches" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
                    app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/pb_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>